--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "animate.css": "^4.1.1",
+    "firebase": "^11.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.9.0",
     "rxjs": "~7.8.0",
