--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@primeng/themes": "^19.0.9",
     "animate.css": "^4.1.1",
     "firebase": "^11.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^18.0.2",
+    "primeng": "^19.0.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
